[package]
name = "byte"
version = "0.2.4"
authors = ["andylokandy"]
license = "MIT/Apache-2.0"

description = "A low-level, zero-copy and panic-free serializer and deserializer for binary."
documentation = "https://docs.rs/byte"
repository = "https://github.com/andylokandy/byte"
homepage = "https://github.com/andylokandy/byte"
readme = "README.md"

keywords = ["binary", "parser", "bytes", "scroll", "no_std"]
categories = ["no-std", "embedded", "encoding", "parsing"]

[dev-dependencies]
quickcheck = "0.3"
byteorder = "1.0.0"