[package]
name = "byte_derive"
version = "0.2.7"
edition = "2021"
authors = ["andylokandy", "jekky"]
license = "MIT/Apache-2.0"

description = "Derive macros for the byte crate"
documentation = "https://docs.rs/byte"
repository = "https://github.com/andylokandy/byte"
homepage = "https://github.com/andylokandy/byte"
readme = "README.md"

keywords = ["binary", "parser", "bytes", "scroll", "no_std"]
categories = ["no-std", "embedded", "encoding", "parsing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
byte = { path = "..", features = ["derive"] }
